fix overflow issue with in-textbox autocomplete and emoji picker

--- a/components/common/auto_height.scss
+++ b/components/common/auto_height.scss
@@ -2,6 +2,5 @@
 // See LICENSE.txt for license information.
 
 .AutoHeight {
-    overflow: hidden;
     transition: height 250ms ease-in-out;
 }
